[package]
name = "iced_mantine"
version = "0.1.0"
edition = "2024"

[dependencies]
dark-light = "2.0.0"
iced = "0.13.1"
iced_core = "0.13.2"
iced_widget = "0.13.4"
once_cell = "1.21.3"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[lints.clippy]
type-complexity = "allow"
map-entry = "allow"
large-enum-variant = "allow"
result_large_err = "allow"
semicolon_if_nothing_returned = "deny"
trivially-copy-pass-by-ref = "deny"
default_trait_access = "deny"
match-wildcard-for-single-variants = "deny"
redundant-closure-for-method-calls = "deny"
filter_map_next = "deny"
manual_let_else = "deny"
unused_async = "deny"
from_over_into = "deny"
needless_borrow = "deny"
new_without_default = "deny"
useless_conversion = "deny"

[lints.rustdoc]
broken_intra_doc_links = "forbid"
